Apache Solr Clustering Implementation

Intro:

See http://wiki.apache.org/solr/ClusteringComponent

CHANGES

$Id:$

================== Release XXXX ==================

* SOLR-1684: Switch to use the SolrIndexSearcher.doc(int, Set<String>) method b/c it can use the document cache (gsingers)

* SOLR-1692: Fix bug relating to carrot.produceSummary option (gsingers)

* SOLR-1804: Re-enabled clustering on trunk, updated to latest version of Carrot2.  No more LGPL run-time dependencies.
  This release of C2 also does not have a specific Lucene dependency.  (Stanislaw Osinski, gsingers)

================== Release 1.4.0 ==================

Solr Clustering will be released for the first time in Solr 1.4.  See http://wiki.apache.org/solr/ClusteringComponent
 for details on using.